--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "drivenshoesback",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "npx nodemon ./src/index.js",
+    "start": "npx nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,5 +22,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/venyustech/DrivenShoes-back.git"
+  },
+  "bugs": {
+    "url": "https://github.com/venyustech/DrivenShoes-back/issues"
+  },
+  "homepage": "https://github.com/venyustech/DrivenShoes-back#readme",
+  "description": ""
 }
